# ChangeLog for dev-python/python-osmgpsmap
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Sep 2010; James Rowe <jnrowe@gmail.com> python-osmgpsmap-0.7.2.ebuild:
  Keyworded amd64.

  08 Aug 2010; James Rowe <jnrowe@gmail.com> -python-osmgpsmap-0.5.0.ebuild,
  python-osmgpsmap-0.7.1.ebuild:
  Keyworded x86.

  08 Aug 2010; James Rowe <jnrowe@gmail.com> python-osmgpsmap-0.7.1.ebuild:
  Keyworded amd64.

*python-osmgpsmap-0.7.2 (03 Aug 2010)

  03 Aug 2010; James Rowe <jnrowe@gmail.com> +python-osmgpsmap-0.7.2.ebuild:
  Version bump [81c].

  19 Jul 2010; James Rowe <jnrowe@gmail.com> python-osmgpsmap-0.5.0.ebuild:
  Keyworded x86.

  15 Jul 2010; James Rowe <jnrowe@gmail.com> python-osmgpsmap-0.5.0.ebuild:
  Keyworded amd64.

*python-osmgpsmap-0.7.1 (08 Jul 2010)

  08 Jul 2010; James Rowe <jnrowe@gmail.com> +python-osmgpsmap-0.7.1.ebuild:
  Version bump [a3c].

  16 Jun 2010; James Rowe <jnrowe@gmail.com> python-osmgpsmap-0.5.0.ebuild:
  Keyworded ~x86.

*python-osmgpsmap-0.5.0 (15 Jun 2010)

  15 Jun 2010; James Rowe <jnrowe@gmail.com> +python-osmgpsmap-0.5.0.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
