@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST python-osmgpsmap-0.7.1.tar.gz 304653 RMD160 7b59b463ac35faf7017d104b27625289b0f05ee2 SHA1 a80011e529f9727c8f80f2f1ea8e1fb61caca5bc SHA256 6b0bcddbeccb51473561951bb1e316d7515e4f1d24b409d1e68c6de3bdad5fc9
 DIST python-osmgpsmap-0.7.2.tar.gz 305114 RMD160 9ead78cb7974c0299c7cd1d916621725b584c2ce SHA1 1bbcacf6cdd8160e95647ee7a0f53bb643446919 SHA256 ff984f720246d68d5a9bdf914041ab8e317c859266c2ea9c897a9e247fe56a41
-EBUILD python-osmgpsmap-0.7.1.ebuild 690 RMD160 c6cf4b4c43c10994ec3528ec078a06529bf5c484 SHA1 226cad29a4db2d96c47e997e046c1f9bec2c62a9 SHA256 3e26d931f2d8613caa44eeec2006c6b014a4ba0e8610acfdb250bfe5ac0c72a7
-EBUILD python-osmgpsmap-0.7.2.ebuild 691 RMD160 3f0b37c6cb3e9a6d4286eff5601f232ba03fdb2e SHA1 530f14b7fbcc0f6b0d78ec28fd905c5fb13a064b SHA256 be677a82c31246f4465c09fc78f4ff84bce9e643ef4c0a87cc7703b9299d8bf8
-MISC ChangeLog 1170 RMD160 1ba443f1fbb54e223008a7059448c1ccb5e68776 SHA1 18903972cf7744fd5c86a0be364d3eb6bd088fad SHA256 043db27459e2fb47988be73bf45737a097f01da87879e9109b4987636279ecc6
+EBUILD python-osmgpsmap-0.7.2.ebuild 690 RMD160 c6cf4b4c43c10994ec3528ec078a06529bf5c484 SHA1 226cad29a4db2d96c47e997e046c1f9bec2c62a9 SHA256 3e26d931f2d8613caa44eeec2006c6b014a4ba0e8610acfdb250bfe5ac0c72a7
+MISC ChangeLog 1298 RMD160 6b9be2a0dd2ab3f836d1ff9e218eb52f94f16aca SHA1 3c269c72fa6ceda4f643764e469e1e17e5b48c9b SHA256 7074306939da02bd2ffb4d509b281d0af88d11deb360b980ec926d68e97178e7
 MISC metadata.xml 523 RMD160 f7ff5838b2704a67d1e046a9aac19a9258e085c2 SHA1 ba92e8adf9944c6eec6c831097ad86bc27f92a99 SHA256 011a0bf002ca76cb43013a8e85543663424fc89bbe4163160bd17f0595250e0a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEUEARECAAYFAkx/5LgACgkQzJrj3cAXR0mUGwCgt731ESV0ltPPgT9l7WfJ+MLp
-zHYAmKJ58EmcHrsxuNERizmO3WQtTnk=
-=n3TI
+iEYEARECAAYFAkx/5mkACgkQzJrj3cAXR0n0OgCgkqCL3eFBFq1gHybGq1wATXn5
+4xcAnj5QnuzV1CwBOnFigiYmAKVkyJFO
+=r0/w
 -----END PGP SIGNATURE-----
