@@ -14,7 +14,7 @@ SRC_URI="http://www.johnstowers.co.nz/files/osm-gps-map/${P}.tar.gz"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 RDEPEND="dev-python/pygtk
