@@ -1,4 +1,3 @@
-REM 2010-09-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/python-osmgpsmap-0.7.2 %a
 REM 2010-09-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/lettuce-0.1.10 %a
 REM 2010-09-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/lettuce-0.1.10 %a
 REM 2010-09-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/restview-1.2 %a
