@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Sep 2010; James Rowe <jnrowe@gmail.com> -python-osmgpsmap-0.7.1.ebuild,
+  python-osmgpsmap-0.7.2.ebuild:
+  Keyworded x86.
+
   02 Sep 2010; James Rowe <jnrowe@gmail.com> python-osmgpsmap-0.7.2.ebuild:
   Keyworded amd64.
 
